# lungo

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  THIRD-PARTY-NOTICES.md  cliff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report  config.yml  feature-request.md  other.md
.github/workflows/: CI.yml
doc/man/: lungo.1.scd
res/completions/: lungo.bash  lungo.fish  lungo.zsh
res/desktop/: lungo.desktop
scripts/: mkrelease.sh
src/: help.rs  inhibit.rs  lockfile.rs  main.rs  tray.rs
