[package]
name = "lungo"
version = "0.0.1"
authors = ["Robin Candau <robincandau@protonmail.com>"]
edition = "2024"
description = "A simple systray applet to prevent your system from going idle or sleeping"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "3.1.4"
