[package]
name = "lungo"
version = "0.0.1"
authors = ["Robin Candau <robincandau@protonmail.com>"]
edition = "2024"
description = "A simple systray applet to prevent the system from going idle or suspending on demand"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.11"
fs2 = "0.4.3"
ksni = "0.3.6"
log = "0.4.33"
tokio = "1.53.1"
zbus = "5.18.0"

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "3.1.4"
